Fix typo in repository name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  imageRepository: 'gcr.io/powerchord-qa/pipelines-go'
+  imageRepository: 'grc.io/powerchord-qa/pipelines-go'
 
 steps:
 - task: Docker@2
