--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
         curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
         dep ensure
     fi  
-    go build -v ./app
+    go build -v .
   workingDirectory: '$(modulePath)'
   displayName: 'Install dependencies'
   
